fix：修复LoadingBar组件与Loading组件挂载的实例名称相同的问题，以及LoadingBar组件z-index样式层级

--- a/packages/LoadingBar/src/style.scss
+++ b/packages/LoadingBar/src/style.scss
@@ -9,6 +9,7 @@
   //   transition: all 5s ease;
   background: $loading-bar-background;
   transform: $loading-bar-transform;
+  z-index: $loading-bar-z-index;
 }
 .l-loading-bar-peg {
   position: absolute;
